--- a/src/css/_app.css
+++ b/src/css/_app.css
@@ -22,3 +22,17 @@ body {
   color: red;
   font-weight: bold;
 }
+
+.max-h-modal {
+  overflow-x: auto;
+}
+
+a{
+  color: royalblue;
+}
+.search-input{
+  width: 100%;
+    height: 35px;
+    border: 1px solid #eee;
+    border-radius: 5px;
+}
